Fix styling issues with loader and chart on mobile

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -43,6 +43,17 @@
     text-align: center;
 }
 
+.qg-chart-wrapper {
+    width: 100%;
+    height: 28vh;
+    position: relative;
+}
+
+.qg-chart-wrapper.hidden {
+    display: block !important;
+    visibility: hidden;
+}
+
 @media screen and (max-width: 767px) {
     .qg-controls {
         padding: 2px;
@@ -51,5 +62,9 @@
     .qg-controls__control {
         font-size: 10px;
         padding: 1px 9px;
+    }
+
+    .qg-chart-wrapper {
+        height: 25vh;
     }
 }
